# fis

./: Cargo.toml  readme.md
src/: cli.rs  main.rs  operation.rs
