[package]
name = "fis"
version = "0.0.1-alpha.1"
edition = "2021"
authors = ["Kilerd <blove694@gmail.com>"]
description = "folder in sync with git"
license = "MIT"
repository = "https://github.com/Kilerd/fis"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.14.4"
clap = { version = "3.0.0", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1.0.58"
once_cell = "1.12.0"
